--- a/about.html
+++ b/about.html
@@ -146,13 +146,14 @@
 
   <!-- COMBINED CARD: centered underneath both columns -->
   <section class="section-spacer">
-    <div class="container">
-      <div class="content-card about-combined-card">
-        <div class="row col-spacing-30 align-items-center">
+  <div class="container">
+    <div class="combined-wrap about-combined-card">
+      <div class="content-card">
+        <div class="row col-spacing-30 align-items-stretch">
 
           <!-- Qualifications -->
           <div class="col-lg-6">
-            <h2 class="mb-3">Qualifications &amp; background.</h2> 
+            <h3 class="mb-3">Qualifications &amp; background.</h3>
             <ul class="list-checks mb-4">
               <li>Accredited Diploma in Transformative Coaching</li>
               <li>Working towards ICF accreditation</li>
@@ -170,11 +171,13 @@
 
           <!-- Workplace image + caption -->
           <div class="col-lg-6">
-            <img
-              src="assets/images/workplace.jpg"
-              alt="Introducing coaching in my workplace"
-              class="about-workimg"
-            >
+            <div class="about-workimg-wrap">
+              <img
+                src="assets/images/workplace.jpg"
+                alt="Introducing coaching in my workplace"
+                class="about-workimg"
+              >
+            </div>
             <p class="about-caption mb-0">
               Introducing coaching in my workplace — nurturing a culture where people can learn and grow.
             </p>
@@ -183,7 +186,9 @@
         </div>
       </div>
     </div>
-  </section>
+  </div>
+</section>
+
 
   <!-- READY TO BEGIN -->
   <section class="section-spacer">
