--- a/about.html
+++ b/about.html
@@ -149,7 +149,7 @@
   <div class="container">
     <div class="combined-wrap about-combined-card">
       <div class="content-card">
-        <div class="row col-spacing-30 align-items-stretch">
+        <div class="row col-spacing-30 align-items-center">
 
           <!-- Qualifications -->
           <div class="col-lg-6">
