--- a/about.html
+++ b/about.html
@@ -145,45 +145,44 @@
   </section>
 
   <!-- COMBINED CARD: centered underneath both columns -->
-  <section class="section-spacer">
+<section class="section-spacer">
   <div class="container">
-    <div class="combined-wrap about-combined-card">
-      <div class="content-card">
-        <div class="row col-spacing-30 align-items-center">
+    <div class="content-card combined-wrap about-combined-card">
+      <div class="row col-spacing-30 align-items-center">
 
-          <!-- Qualifications -->
-          <div class="col-lg-6">
-            <h3 class="mb-3">Qualifications &amp; background.</h3>
-            <ul class="list-checks mb-4">
-              <li>Accredited Diploma in Transformative Coaching</li>
-              <li>Working towards ICF accreditation</li>
-              <li>BA (Hons) Degree in Architecture (Part 1)</li>
-              <li>Pg Diploma in Architecture (Part 2)</li>
-              <li>RIBA Professional Practice Qualification (Part 3)</li>
-            </ul>
+        <!-- Qualifications -->
+        <div class="col-lg-6">
+          <h3 class="mb-3">Qualifications &amp; background.</h3>
+          <ul class="list-checks mb-4">
+            <li>Accredited Diploma in Transformative Coaching</li>
+            <li>Working towards ICF accreditation</li>
+            <li>BA (Hons) Degree in Architecture (Part 1)</li>
+            <li>Pg Diploma in Architecture (Part 2)</li>
+            <li>RIBA Professional Practice Qualification (Part 3)</li>
+          </ul>
 
+          <img
+            src="assets/images/animas@2x.png"
+            alt="Accredited Transformative Coach badge"
+            class="about-badge"
+          >
+        </div>
+
+        <!-- Workplace image + caption -->
+        <div class="col-lg-6">
+          <div class="about-workimg-wrap">
             <img
-              src="assets/images/animas@2x.png"
-              alt="Accredited Transformative Coach badge"
-              class="about-badge"
+              src="assets/images/workplace.jpg"
+              alt="Introducing coaching in my workplace"
+              class="about-workimg"
             >
           </div>
 
-          <!-- Workplace image + caption -->
-          <div class="col-lg-6">
-            <div class="about-workimg-wrap">
-              <img
-                src="assets/images/workplace.jpg"
-                alt="Introducing coaching in my workplace"
-                class="about-workimg"
-              >
-            </div>
-            <p class="about-caption mb-0">
-              Introducing coaching in my workplace — nurturing a culture where people can learn and grow.
-            </p>
-          </div>
-
+          <p class="about-caption mb-0">
+            Introducing coaching in my workplace — nurturing a culture where people can learn and grow.
+          </p>
         </div>
+
       </div>
     </div>
   </div>
