--- a/about.html
+++ b/about.html
@@ -147,29 +147,34 @@
   <!-- COMBINED CARD: centered underneath both columns -->
 <section class="section-spacer">
   <div class="container">
-    <div class="combined-wrap">
+    <div class="combined-wrap about-combined-card">
       <div class="content-card">
 
-        <div class="row justify-content-center">
-          <div class="col-lg-5">
+        <div class="row col-spacing-30 align-items-center">
 
-            <!-- Qualifications -->
+          <!-- Qualifications -->
+          <div class="col-lg-5">
             <h3 class="mb-3">Qualifications &amp; background.</h3>
-            <ul class="list-checks mb-4">
+            <ul class="list-checks mb-0">
               <li>Accredited Diploma in Transformative Coaching</li>
               <li>Working towards ICF accreditation</li>
               <li>BA (Hons) Degree in Architecture (Part 1)</li>
               <li>Pg Diploma in Architecture (Part 2)</li>
               <li>RIBA Professional Practice Qualification (Part 3)</li>
             </ul>
+          </div>
 
+          <!-- Badge -->
+          <div class="col-lg-2 text-center">
             <img
               src="assets/images/animas@2x.png"
               alt="Accredited Transformative Coach badge"
-              class="about-badge mb-4"
+              class="about-badge"
             >
+          </div>
 
-            <!-- Work image -->
+          <!-- Work image + caption -->
+          <div class="col-lg-5">
             <div class="about-workimg-wrap">
               <img
                 src="assets/images/workplace.jpg"
@@ -177,12 +182,11 @@
                 class="about-workimg"
               >
             </div>
-
             <p class="about-caption mb-0">
               Introducing coaching in my workplace — nurturing a culture where people can learn and grow.
             </p>
-
           </div>
+
         </div>
 
       </div>
