--- a/about.html
+++ b/about.html
@@ -152,19 +152,21 @@
 
         <div class="row col-spacing-30 align-items-center">
 
-          <!-- Qualifications -->
+          <!-- 1) Qualifications (mini card inside combined card) -->
           <div class="col-lg-5">
-            <h3 class="mb-3">Qualifications &amp; background.</h3>
-            <ul class="list-checks mb-0">
-              <li>Accredited Diploma in Transformative Coaching</li>
-              <li>Working towards ICF accreditation</li>
-              <li>BA (Hons) Degree in Architecture (Part 1)</li>
-              <li>Pg Diploma in Architecture (Part 2)</li>
-              <li>RIBA Professional Practice Qualification (Part 3)</li>
-            </ul>
+            <div class="about-mini-card">
+              <h3 class="mb-3">Qualifications &amp; background.</h3>
+              <ul class="list-checks mb-0">
+                <li>Accredited Diploma in Transformative Coaching</li>
+                <li>Working towards ICF accreditation</li>
+                <li>BA (Hons) Degree in Architecture (Part 1)</li>
+                <li>Pg Diploma in Architecture (Part 2)</li>
+                <li>RIBA Professional Practice Qualification (Part 3)</li>
+              </ul>
+            </div>
           </div>
 
-          <!-- Badge -->
+          <!-- 2) Badge (separate) -->
           <div class="col-lg-2 text-center">
             <img
               src="assets/images/animas@2x.png"
@@ -173,7 +175,7 @@
             >
           </div>
 
-          <!-- Work image + caption -->
+          <!-- 3) Work image + caption (separate) -->
           <div class="col-lg-5">
             <div class="about-workimg-wrap">
               <img
@@ -193,6 +195,7 @@
     </div>
   </div>
 </section>
+
 
 
   <!-- READY TO BEGIN -->
