--- a/about.html
+++ b/about.html
@@ -185,7 +185,7 @@
               >
             </div>
             <p class="about-caption mb-0">
-              Introducing coaching in my workplace — nurturing a culture where people can learn and grow.
+              Introducing coaching in my workplace. Nurturing a culture where people can learn and grow.
             </p>
           </div>
 
