--- a/services.html
+++ b/services.html
@@ -64,7 +64,7 @@ It’s a space to reconnect with who you are, honour what matters to you and mov
                 <div class="content-card h-100">
                     <h2 class="mb-3">Who I work with.</h2>
                     <p>
-                        At noein, I support individuals and professionals who, like me, feel a pull toward something more aligned — a desire to reconnect with themselves, gain direction and build confidence in the choices ahead.
+                        At noein, I support individuals and professionals who, like me, feel a pull toward something more aligned, a desire to reconnect with themselves, gain direction and build confidence in the choices ahead.
                     </p>
                 </div>
             </div>
