--- a/about.html
+++ b/about.html
@@ -147,52 +147,52 @@
   <!-- COMBINED CARD: centered underneath both columns -->
 <section class="section-spacer">
   <div class="container">
+
+    <!-- MAIN combined card -->
     <div class="combined-wrap about-combined-card">
-      <div class="content-card">
+      <div class="row col-spacing-30 align-items-center">
 
-        <div class="row col-spacing-30 align-items-center">
+        <!-- LEFT: mini qualifications card + badge -->
+        <div class="col-lg-6">
 
-          <!-- 1) Qualifications (mini card inside combined card) -->
-          <div class="col-lg-5">
-            <div class="about-mini-card">
-              <h3 class="mb-3">Qualifications &amp; background.</h3>
-              <ul class="list-checks mb-0">
-                <li>Accredited Diploma in Transformative Coaching</li>
-                <li>Working towards ICF accreditation</li>
-                <li>BA (Hons) Degree in Architecture (Part 1)</li>
-                <li>Pg Diploma in Architecture (Part 2)</li>
-                <li>RIBA Professional Practice Qualification (Part 3)</li>
-              </ul>
-            </div>
+          <!-- MINI card -->
+          <div class="about-mini-card">
+            <h3 class="mb-3">Qualifications &amp; background.</h3>
+
+            <ul class="list-checks mb-0">
+              <li>Accredited Diploma in Transformative Coaching</li>
+              <li>Working towards ICF accreditation</li>
+              <li>BA (Hons) Degree in Architecture (Part 1)</li>
+              <li>Pg Diploma in Architecture (Part 2)</li>
+              <li>RIBA Professional Practice Qualification (Part 3)</li>
+            </ul>
           </div>
 
-          <!-- 2) Badge (separate) -->
-          <div class="col-lg-2 text-center">
+          <img
+            src="assets/images/animas@2x.png"
+            alt="Accredited Transformative Coach badge"
+            class="about-badge mt-3"
+          >
+        </div>
+
+        <!-- RIGHT: image + caption (not a separate card, just wrapped image) -->
+        <div class="col-lg-6">
+          <div class="about-workimg-wrap">
             <img
-              src="assets/images/animas@2x.png"
-              alt="Accredited Transformative Coach badge"
-              class="about-badge"
+              src="assets/images/workplace.jpg"
+              alt="Introducing coaching in my workplace"
+              class="about-workimg"
             >
           </div>
 
-          <!-- 3) Work image + caption (separate) -->
-          <div class="col-lg-5">
-            <div class="about-workimg-wrap">
-              <img
-                src="assets/images/workplace.jpg"
-                alt="Introducing coaching in my workplace"
-                class="about-workimg"
-              >
-            </div>
-            <p class="about-caption mb-0">
-              Introducing coaching in my workplace. Nurturing a culture where people can learn and grow.
-            </p>
-          </div>
-
+          <p class="about-caption mb-0">
+            Introducing coaching in my workplace — nurturing a culture where people can learn and grow.
+          </p>
         </div>
 
       </div>
     </div>
+
   </div>
 </section>
 
