--- a/about.html
+++ b/about.html
@@ -144,19 +144,15 @@
     </div>
   </section>
 
-  <!-- COMBINED CARD: centered underneath both columns -->
+  <!-- COMBINED CARD -->
 <section class="section-spacer">
   <div class="container">
-
-    <!-- MAIN combined card -->
     <div class="combined-wrap about-combined-card">
-      <div class="row col-spacing-30 align-items-center">
+      <div class="row col-spacing-30 align-items-stretch about-combined-row">
 
-        <!-- LEFT: mini qualifications card + badge -->
-        <div class="col-lg-6">
-
-          <!-- MINI card -->
-          <div class="about-mini-card">
+        <!-- LEFT: Qualifications (mini card) -->
+        <div class="col-lg-5 d-flex">
+          <div class="about-mini-card w-100">
             <h3 class="mb-3">Qualifications &amp; background.</h3>
 
             <ul class="list-checks mb-0">
@@ -167,34 +163,41 @@
               <li>RIBA Professional Practice Qualification (Part 3)</li>
             </ul>
           </div>
-
-          <img
-            src="assets/images/animas@2x.png"
-            alt="Accredited Transformative Coach badge"
-            class="about-badge mt-3"
-          >
         </div>
 
-        <!-- RIGHT: image + caption (not a separate card, just wrapped image) -->
-        <div class="col-lg-6">
-          <div class="about-workimg-wrap">
+        <!-- MIDDLE: Badge -->
+        <div class="col-lg-2 d-flex about-badge-col">
+          <div class="about-badge-center w-100">
             <img
-              src="assets/images/workplace.jpg"
-              alt="Introducing coaching in my workplace"
-              class="about-workimg"
+              src="assets/images/animas@2x.png"
+              alt="Accredited Transformative Coach badge"
+              class="about-badge"
             >
           </div>
+        </div>
 
-          <p class="about-caption mb-0">
-            Introducing coaching in my workplace — nurturing a culture where people can learn and grow.
-          </p>
+        <!-- RIGHT: Work image + caption (same width as Philosophy card) -->
+        <div class="col-lg-5 d-flex">
+          <div class="about-work-block w-100">
+            <div class="about-workimg-wrap">
+              <img
+                src="assets/images/workplace.jpg"
+                alt="Introducing coaching in my workplace"
+                class="about-workimg"
+              >
+            </div>
+
+            <p class="about-caption mb-0">
+              Introducing coaching in my workplace. Nurturing a culture where people can learn and grow.
+            </p>
+          </div>
         </div>
 
       </div>
     </div>
-
   </div>
 </section>
+
 
 
 
