--- a/about.html
+++ b/about.html
@@ -144,15 +144,17 @@
     </div>
   </section>
 
-  <!-- COMBINED CARD -->
+        
+<!-- COMBINED CARD (same structure as Ready to begin) -->
 <section class="section-spacer">
   <div class="container">
-    <div class="combined-wrap about-combined-card">
-      <div class="row col-spacing-30 align-items-stretch about-combined-row">
 
-        <!-- LEFT: Qualifications (mini card) -->
-        <div class="col-lg-5 d-flex">
-          <div class="about-mini-card w-100">
+    <div class="content-card combined-wrap about-combined-card">
+      <div class="row col-spacing-30 align-items-center">
+
+        <!-- LEFT: Qualifications mini-card -->
+        <div class="col-lg-5">
+          <div class="about-mini-card">
             <h3 class="mb-3">Qualifications &amp; background.</h3>
 
             <ul class="list-checks mb-0">
@@ -166,35 +168,32 @@
         </div>
 
         <!-- MIDDLE: Badge -->
-        <div class="col-lg-2 d-flex about-badge-col">
-          <div class="about-badge-center w-100">
-            <img
-              src="assets/images/animas@2x.png"
-              alt="Accredited Transformative Coach badge"
-              class="about-badge"
-            >
-          </div>
+        <div class="col-lg-2 d-flex justify-content-center">
+          <img
+            src="assets/images/animas@2x.png"
+            alt="Accredited Transformative Coach badge"
+            class="about-badge"
+          >
         </div>
 
-        <!-- RIGHT: Work image + caption (same width as Philosophy card) -->
-        <div class="col-lg-5 d-flex">
-          <div class="about-work-block w-100">
-            <div class="about-workimg-wrap">
-              <img
-                src="assets/images/workplace.jpg"
-                alt="Introducing coaching in my workplace"
-                class="about-workimg"
-              >
-            </div>
-
-            <p class="about-caption mb-0">
-              Introducing coaching in my workplace. Nurturing a culture where people can learn and grow.
-            </p>
+        <!-- RIGHT: Work image + caption -->
+        <div class="col-lg-5">
+          <div class="about-workimg-wrap">
+            <img
+              src="assets/images/workplace.jpg"
+              alt="Introducing coaching in my workplace"
+              class="about-workimg"
+            >
           </div>
+
+          <p class="about-caption mb-0">
+            Introducing coaching in my workplace. Nurturing a culture where people can learn and grow.
+          </p>
         </div>
 
       </div>
     </div>
+
   </div>
 </section>
 
