--- a/about.html
+++ b/about.html
@@ -129,7 +129,7 @@
               </p>
 
               <p class="mb-3">
-                Coaching helps us pause, notice the choices we've made, and understand the reasons behind them. It supports us to reconnect with our values and remember where we want our choices to take us, so we can live with greater intention, clarity, and alignment.
+                Coaching helps us press pause, notice the choices we've made, and understand the reasons behind them. It supports us to reconnect with our values and remember where we want our choices to take us, so we can live with greater intention, clarity, and alignment.
               </p>
 
               <p class="mb-0">
@@ -145,16 +145,17 @@
   </section>
 
         
-<!-- COMBINED CARD (same structure as Ready to begin) -->
+<!-- COMBINED CARD -->
 <section class="section-spacer">
   <div class="container">
-    <div class="content-card combined-wrap about-combined-card">
-        
-        <!-- LEFT: Qualifications mini-card -->
-        <div class="col-lg-5">
+    <div class="content-card combined-wrap">
+
+      <div class="row align-items-center col-spacing-30">
+
+        <!-- LEFT: Qualifications (mini card) -->
+        <div class="col-lg-4">
           <div class="about-mini-card">
             <h3 class="mb-3">Qualifications &amp; background.</h3>
-
             <ul class="list-checks mb-0">
               <li>Accredited Diploma in Transformative Coaching</li>
               <li>Working towards ICF accreditation</li>
@@ -166,16 +167,16 @@
         </div>
 
         <!-- MIDDLE: Badge -->
-        <div class="col-lg-2 d-flex justify-content-center">
+        <div class="col-lg-2 text-center">
           <img
             src="assets/images/animas@2x.png"
             alt="Accredited Transformative Coach badge"
-            class="about-badge"
+            class="about-badge mx-auto"
           >
         </div>
 
         <!-- RIGHT: Work image + caption -->
-        <div class="col-lg-5">
+        <div class="col-lg-6">
           <div class="about-workimg-wrap">
             <img
               src="assets/images/workplace.jpg"
@@ -183,17 +184,17 @@
               class="about-workimg"
             >
           </div>
-
-          <p class="about-caption mb-0">
+          <p class="about-caption mt-2 mb-0">
             Introducing coaching in my workplace. Nurturing a culture where people can learn and grow.
           </p>
         </div>
 
       </div>
-    </div>
 
+    </div>
   </div>
 </section>
+
 
 
 
