--- a/about.html
+++ b/about.html
@@ -110,19 +110,16 @@
         </div>
 
         <!-- RIGHT: portrait + philosophy -->
-        <div class="col-lg-5">
-          <div class="about-right-stack">
+        <div class="col-lg-5 text-center">
 
-            <div class="about-portrait-wrap text-center">
-              <img
-                src="assets/images/Alex.jpeg"
-                alt="Alexandra portrait"
-                class="about-portrait-circle"
-              >
-            </div>
+  <img
+    src="assets/images/Alex.jpeg"
+    alt="Alexandra portrait"
+    class="about-float-img"
+  >
 
-            <div class="content-card">
-              <h2 class="mb-3">My Philosophy.</h2>
+  <div class="content-card about-float-card text-left">
+    <h3 class="mb-3">My philosophy.</h3>
 
               <p class="mb-3">
                 Life is often influenced by factors we don't fully notice. In our busy, demanding, and sometimes stressful lives, it's easy to lose sight of what truly matters and to find ourselves living in ways that don't fully reflect our dreams or values.
@@ -137,7 +134,7 @@
               </p>
             </div>
 
-          </div>
+</div>
         </div>
 
       </div>
