--- a/about.html
+++ b/about.html
@@ -119,7 +119,7 @@
   >
 
   <div class="content-card about-float-card text-left">
-    <h3 class="mb-3">My philosophy.</h3>
+    <h2 class="mb-3">My philosophy.</h2>
 
               <p class="mb-3">
                 Life is often influenced by factors we don't fully notice. In our busy, demanding, and sometimes stressful lives, it's easy to lose sight of what truly matters and to find ourselves living in ways that don't fully reflect our dreams or values.
@@ -152,7 +152,7 @@
         <!-- LEFT: Qualifications (mini card) -->
         <div class="col-lg-4">
           <div class="about-mini-card">
-            <h3 class="mb-3">Qualifications &amp; background.</h3>
+            <h2 class="mb-3">Qualifications.</h2>
             <ul class="list-checks mb-0">
               <li>Accredited Diploma in Transformative Coaching</li>
               <li>Working towards ICF accreditation</li>
