--- a/services.html
+++ b/services.html
@@ -45,7 +45,7 @@
 <section class="section-spacer">
     <div class="container text-center">
         <h1 class="mb-3">Coaching with <i class="blue-font-color">noein</i></h1>
-        <h2 class="mb-4">A space to think, understand yourself and become "You"</h2>
+        <h2 class="mb-4">A space to Think. A space to understand. A space to become.</h2>
         <p class="mb-0">
             Transformative coaching offers you time and space to explore what matters,
             understand what’s shaping your choices and remember your true self.<p>
