--- a/services.html
+++ b/services.html
@@ -73,13 +73,13 @@ It’s a space to reconnect with who you are, honour what matters to you and mov
                 <div class="content-card h-100">
                     <h2 class="mb-3">What coaching can help with.</h2>
                     <ul class="list-checks mb-0">
-                        <li>Gaining clarity on direction or next steps</li>
-                        <li>Exploring a sense of feeling stuck or off-track</li>
-                        <li>Reconnecting with values and priorities</li>
-                        <li>Building confidence in your own judgement</li>
-                        <li>Navigating change or transition</li>
-                        <li>Understanding unhelpful thought and behaviour patterns</li>
-                        <li>Creating more calm and alignment</li>
+                        <li>Gain clarity on direction or next steps</li>
+                        <li>Explore a sense of feeling stuck or off-track</li>
+                        <li>Reconnect with values and priorities</li>
+                        <li>Build confidence in your own judgement</li>
+                        <li>Navigate change or transition</li>
+                        <li>Understand unhelpful thought and behaviour patterns</li>
+                        <li>Create more calm and alignment</li>
                     </ul>
                 </div>
             </div>
