--- a/contact.html
+++ b/contact.html
@@ -157,10 +157,11 @@
           <ul class="list-checks mb-2">
             <li>Free 30-minute discovery call</li>
             <li>60-minute online coaching sessions</li>
+            <li>In person sessions also available</li>
             <li>Evenings & weekends available</li>
           </ul>
           <p class="contact-reassurance mb-0">
-            No pressure — ask anything.
+            Fell free to ask anything.
           </p>
         </div>
       </div>
