--- a/contact.html
+++ b/contact.html
@@ -161,7 +161,7 @@
             <li>Evenings & weekends available</li>
           </ul>
           <p class="contact-reassurance mb-0">
-            Fell free to ask anything.
+            Feel free to ask anything.
           </p>
         </div>
       </div>
