--- a/services.html
+++ b/services.html
@@ -41,18 +41,45 @@
 
 <main class="flex-fill">
 
-<!-- HERO -->
+<!-- SERVICES: Coaching with noein -->
 <section class="section-spacer">
-    <div class="container text-center">
-        <h1 class="mb-3">Coaching with <i class="blue-font-color">noein</i></h1>
-        <h2 class="mb-4">A space to Think. A space to understand. A space to become.</h2>
-        <p class="mb-0">
-            Transformative coaching offers you time and space to explore what matters,
-            understand what’s shaping your choices and remember your true self.<p>
-        <p class="mb-3">Coaching at noein is for individuals and professionals who want to understand themselves more deeply and make choices that feel aligned rather than imposed.
-It’s a space to reconnect with who you are, honour what matters to you and move forward with greater clarity and confidence.
-        </p>
+  <div class="container">
+    <div class="row col-spacing-30 align-items-stretch">
+
+      <!-- LEFT: TEXT -->
+      <div class="col-lg-6 d-flex">
+        <div class="content-card">
+          <h1 class="mb-3">
+            Coaching with <i class="blue-font-color">noein</i>
+          </h1>
+
+          <h4 class="mb-4">
+            A space to think. A space to understand. A space to become.
+          </h4>
+
+          <p class="mb-3">
+            Transformative coaching offers you time and space to explore what matters, understand what’s shaping your choices and remember your true self.
+          </p>
+
+          <p class="mb-0">
+            Coaching at noein is for individuals and professionals who want to understand themselves more deeply and make choices that feel aligned rather than imposed. It’s a space to reconnect with who you are, honour what matters to you and move forward with greater clarity and confidence.
+          </p>
+        </div>
+      </div>
+
+      <!-- RIGHT: IMAGE -->
+      <div class="col-lg-6 d-flex">
+        <div class="services-image-wrap">
+          <img
+            src="assets/images/services.jpg"
+            alt="A calm space for coaching reflection"
+            class="services-image"
+          >
+        </div>
+      </div>
+
     </div>
+  </div>
 </section>
 
 <!-- SERVICES GRID -->
