--- a/services.html
+++ b/services.html
@@ -41,33 +41,35 @@
 
 <main class="flex-fill">
 
-<!-- SERVICES: Coaching with noein -->
+<!-- SERVICES: Intro (same layout as Contact top) -->
 <section class="section-spacer">
   <div class="container">
-    <div class="row col-spacing-30 align-items-stretch">
+    <div class="row col-spacing-30 align-items-stretch services-top-row">
 
-      <!-- LEFT: TEXT -->
+      <!-- LEFT: TEXT CARD -->
       <div class="col-lg-6 d-flex">
-        <div class="content-card">
-          <h1 class="mb-3">
-            Coaching with <i class="blue-font-color">noein</i>
-          </h1>
+        <div class="content-card h-100">
 
           <h4 class="mb-4">
             A space to think. A space to understand. A space to become.
           </h4>
 
           <p class="mb-3">
-            Transformative coaching offers you time and space to explore what matters, understand what’s shaping your choices and remember your true self.
+            Transformative coaching offers you time and space to explore what matters,
+            understand what’s shaping your choices, and reconnect with your true self.
           </p>
 
           <p class="mb-0">
-            Coaching at noein is for individuals and professionals who want to understand themselves more deeply and make choices that feel aligned rather than imposed. It’s a space to reconnect with who you are, honour what matters to you and move forward with greater clarity and confidence.
+            Coaching at noein is for individuals and professionals who want to understand
+            themselves more deeply and make choices that feel aligned rather than imposed.
+            It’s a space to honour what matters to you and move forward with clarity
+            and confidence.
           </p>
+
         </div>
       </div>
 
-      <!-- RIGHT: IMAGE -->
+      <!-- RIGHT: IMAGE CARD -->
       <div class="col-lg-6 d-flex">
         <div class="services-image-wrap">
           <img
@@ -81,6 +83,7 @@
     </div>
   </div>
 </section>
+
 
 <!-- SERVICES GRID -->
 <section class="section-spacer">
