--- a/services.html
+++ b/services.html
@@ -44,10 +44,10 @@
 <!-- SERVICES: Intro (same layout as Contact top) -->
 <section class="section-spacer">
   <div class="container">
-    <div class="row col-spacing-30 align-items-stretch services-top-row">
+    <div class="row align-items-start col-spacing-30">
 
       <!-- LEFT: TEXT CARD -->
-      <div class="col-lg-6 d-flex">
+      <div class="col-lg-7 mb-4 mb-lg-0">
         <div class="content-card h-100">
 
           <h4 class="mb-4">
@@ -70,7 +70,7 @@
       </div>
 
       <!-- RIGHT: IMAGE CARD -->
-      <div class="col-lg-6 d-flex">
+      <div class="col-lg-5">
         <div class="services-image-wrap">
           <img
             src="assets/images/services.jpg"
