--- a/services.html
+++ b/services.html
@@ -49,6 +49,9 @@
       <!-- LEFT: TEXT CARD -->
       <div class="col-lg-7 mb-4 mb-lg-0">
         <div class="content-card h-100">
+            <h1 class="mb-3">
+            Coaching with <i class="blue-font-color">noein</i>
+          </h1>
 
           <h4 class="mb-4">
             A space to think. A space to understand. A space to become.
