--- a/services.html
+++ b/services.html
@@ -41,15 +41,14 @@
 
 <main class="flex-fill">
 
-<!-- SERVICES: Intro (same layout as Contact top) -->
+<!-- SERVICES: Intro (text left, image right – like Contact) -->
 <section class="section-spacer">
   <div class="container">
-    <div class="row align-items-start col-spacing-30">
+    <div class="row col-spacing-30 align-items-stretch services-top-row">
 
-      <!-- LEFT: TEXT CARD -->
-      <div class="col-lg-7 mb-4 mb-lg-0">
-        <div class="content-card h-100">
-            <h1 class="mb-3">
+      <!-- LEFT: TEXT (NO CARD) -->
+      <div class="col-lg-6 d-flex">
+        <div class="services-text-block">
             Coaching with <i class="blue-font-color">noein</i>
           </h1>
 
@@ -72,8 +71,8 @@
         </div>
       </div>
 
-      <!-- RIGHT: IMAGE CARD -->
-      <div class="col-lg-5">
+      <!-- RIGHT: IMAGE (CARD) -->
+      <div class="col-lg-6 d-flex">
         <div class="services-image-wrap">
           <img
             src="assets/images/services.jpg"
@@ -86,6 +85,7 @@
     </div>
   </div>
 </section>
+
 
 
 <!-- SERVICES GRID -->
