--- a/services.html
+++ b/services.html
@@ -49,8 +49,7 @@
       <!-- LEFT: TEXT (NO CARD) -->
       <div class="col-lg-6 d-flex">
         <div class="services-text-block">
-            Coaching with <i class="blue-font-color">noein</i>
-          </h1>
+            <h1 class="mb-3">Coaching with <i class="blue-font-color">noein</i>.</h1>
 
           <h4 class="mb-4">
             A space to think. A space to understand. A space to become.
