--- a/services.html
+++ b/services.html
@@ -71,15 +71,15 @@
       </div>
 
       <!-- RIGHT: IMAGE (CARD) -->
-      <div class="col-lg-6 d-flex">
-        <div class="services-image-wrap">
-          <img
-            src="assets/images/services.jpg"
-            alt="A calm space for coaching reflection"
-            class="services-image"
-          >
-        </div>
-      </div>
+      <div class="col-lg-6">
+  <div class="services-image-wrap">
+    <img
+      src="assets/images/services.jpg"
+      alt="A quiet space to think"
+      class="services-image"
+    >
+  </div>
+</div>
 
     </div>
   </div>
