--- a/services.html
+++ b/services.html
@@ -44,14 +44,14 @@
 <!-- SERVICES: Intro (text left, image right – like Contact) -->
 <section class="section-spacer">
   <div class="container">
-    <div class="row col-spacing-30 align-items-stretch services-top-row">
+    <div class="row col-spacing-30 services-top-row">
 
-      <!-- LEFT: TEXT (NO CARD) -->
-      <div class="col-lg-6 d-flex">
+      <!-- LEFT: TEXT -->
+      <div class="col-lg-6">
         <div class="services-text-block">
-            <h1 class="mb-3">Coaching with <i class="blue-font-color">noein</i>.</h1>
+          <h1 class="mb-3">Coaching with <i class="blue-font-color">noein</i>.</h1>
 
-          <h4 class="mb-4">
+          <h4 class="mb-3">
             A space to think. A space to understand. A space to become.
           </h4>
 
@@ -63,23 +63,20 @@
           <p class="mb-0">
             Coaching at noein is for individuals and professionals who want to understand
             themselves more deeply and make choices that feel aligned rather than imposed.
-            It’s a space to honour what matters to you and move forward with clarity
-            and confidence.
           </p>
-
         </div>
       </div>
 
-      <!-- RIGHT: IMAGE (CARD) -->
+      <!-- RIGHT: IMAGE -->
       <div class="col-lg-6">
-  <div class="services-image-wrap">
-    <img
-      src="assets/images/services.jpg"
-      alt="A quiet space to think"
-      class="services-image"
-    >
-  </div>
-</div>
+        <div class="services-image-wrap">
+          <img
+            src="assets/images/services.jpg"
+            alt="A quiet space to think"
+            class="services-image"
+          >
+        </div>
+      </div>
 
     </div>
   </div>
