--- a/about.html
+++ b/about.html
@@ -90,7 +90,23 @@
   <!-- TOP ROW: left text + right portrait/philosophy -->
   <section class="section-spacer">
     <div class="container">
-      <div class="row col-spacing-30 align-items-start">
+      <div class="row col-spacing-30 align-items-start about-top-row">
+
+  <!-- LEFT -->
+  <div class="col-lg-7">
+    <h1 class="mb-3">I’m <i class="blue-font-color">Alexandra</i>.</h1>
+    ...
+  </div>
+
+  <!-- RIGHT -->
+  <div class="col-lg-5 about-right-col">
+    <div class="about-right-stack">
+      ...
+    </div>
+  </div>
+
+</div>
+
 
         <!-- LEFT: INTRO TEXT (NO CARD) -->
         <div class="col-lg-7">
