--- a/contact.html
+++ b/contact.html
@@ -74,12 +74,23 @@
 
    <main class="flex-fill">
 
-  <!-- SECTION 1: Top row (Text + Get in touch card) -->
-  <section class="section-spacer section-hero-intro">
-    <div class="container">
-      <div class="row align-items-start col-spacing-30">
-
-        <!-- LEFT: TEXT -->
+  <!-- 1) HERO / JOURNEY IMAGE (full width, card-like) -->
+<section class="section-spacer">
+  <div class="container">
+    <div class="contact-journey-wrap">
+      <img
+        src="assets/images/journey.jpg"
+        alt="Begin your journey"
+        class="contact-journey-img"
+      >
+    </div>
+  </div>
+</section>
+       
+        <!-- 2) BEGIN YOUR JOURNEY / GET IN TOUCH (keep your existing text/cards here) -->
+<section class="section-spacer">
+  <div class="container">
+    <div class="row col-spacing-30 align-items-start">
         <div class="col-lg-7 mb-4 mb-lg-0">
           <h1 class="mb-3">Begin your <i class="blue-font-color">coaching journey</i>.</h1>
 
@@ -124,36 +135,15 @@
                 </a>
               </div>
             </div>
-
           </div>
-        </div>
-
-      </div>
-    </div>
   </section>
 
 
-  <!-- SECTION 2: Bottom row (Long image + Work with me card) -->
-<section class="section-spacer contact-bottom-section">
-  <div class="container contact-bottom-wrap">
-
-    <div class="row contact-bottom-row col-spacing-30">
-
-      <!-- IMAGE (3/4 width) -->
-      <div class="col-lg-9">
-        <div class="contact-banner-wrap">
-          <img
-            src="assets/images/coaching-journey.jpg"
-            alt="Beginning a coaching journey"
-            class="contact-banner-img"
-          >
-        </div>
-      </div>
-
-      <!-- WORK WITH ME (1/4 width) -->
-      <div class="col-lg-3">
-        <div class="content-card">
-          <h2 class="mb-3">Work with me.</h2>
+  <!-- 3) WORK WITH ME (single card underneath) -->
+<section class="section-spacer">
+  <div class="container">
+    <div class="content-card contact-work-card">
+      <h2 class="mb-3">Work with me.</h2>
           <ul class="list-checks mb-2">
             <li>Free 30-minute discovery call</li>
             <li>60-minute online coaching sessions</li>
@@ -165,10 +155,6 @@
           </p>
         </div>
       </div>
-
-    </div>
-
-  </div>
 </section>
 
 
