--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
   <div class="container">
     <div class="contact-journey-wrap">
       <img
-        src="assets/images/journey.jpg"
+        src="assets/images/coaching-journey.jpg"
         alt="Begin your journey"
         class="contact-journey-img"
       >
