--- a/contact.html
+++ b/contact.html
@@ -75,7 +75,7 @@
    <main class="flex-fill">
 
   <!-- 1) HERO / JOURNEY IMAGE (full width, card-like) -->
-<section class="section-spacer">
+<section class="section-spacer tight">
   <div class="container">
     <div class="contact-journey-wrap">
       <img
@@ -88,7 +88,7 @@
 </section>
        
         <!-- 2) BEGIN YOUR JOURNEY / GET IN TOUCH (keep your existing text/cards here) -->
-<section class="section-spacer">
+<section class="section-spacer tight">
   <div class="container">
     <div class="row col-spacing-30 align-items-start">
         <div class="col-lg-7 mb-4 mb-lg-0">
@@ -140,7 +140,7 @@
 
 
   <!-- 3) WORK WITH ME (single card underneath) -->
-<section class="section-spacer">
+<section class="section-spacer tight">
   <div class="container">
     <div class="content-card contact-work-card">
       <h2 class="mb-3">Work with me.</h2>
