--- a/about.html
+++ b/about.html
@@ -144,7 +144,7 @@
 
         
 <!-- COMBINED CARD -->
-<section class="section-spacer">
+<section class="section-spacer tight">
   <div class="container">
     <div class="content-card combined-wrap">
 
