Refactor header navigation structure in services.html

--- a/services.html
+++ b/services.html
@@ -20,22 +20,37 @@
 
 <body class="page-bg" data-preloader="2">
 <div class="flex-wrapper">
-
-<header class="header-white">
-    <nav class="navbar navbar-sticky bg-white">
-        <div class="container d-flex align-items-center justify-content-between">
-            <a class="navbar-brand" href="/">
-                <img src="assets/images/title.svg" alt="noein logo">
-            </a>
-            <ul class="nav">
-                <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-                <li class="nav-item"><a class="nav-link active" href="services.html">Services</a></li>
-                <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-            </ul>
-        </div>
-    </nav>
-</header>
+    <header class="header-white">
+        <nav class="navbar navbar-sticky bg-white">
+            <div class="container d-flex align-items-center justify-content-between">
+                <a class="navbar-brand" href="/">
+                    <div class="card">
+                        <img src="assets/images/title.svg" alt="Logo">
+                        <img src="assets/images/title-hover.svg" alt="Logo Hover" class="img-top">
+                    </div>
+                </a>
+                <ul class="nav dropdown-grey">
+                    <li class="nav-item grey-font-color">
+                        <a class="nav-link" href="/"><p class="underlineload grey-font-color">Home</p></a>
+                    </li>
+                    <li class="nav-item grey-font-color">
+                        <a class="nav-link" href="about.html"><p class="underlineload grey-font-color">About</p></a>
+                    </li>
+                    <li class="nav-item grey-font-color">
+    <a class="nav-link" href="services.html">
+        <p class="underlineload grey-font-color">Services</p>
+    </a>
+</li>
+                    <li class="nav-item grey-font-color">
+                        <a class="nav-link" href="contact.html"><p class="underlineload grey-font-color">Contact</p></a>
+                    </li>
+                </ul>
+                <button class="nav-toggle-btn d-lg-none">
+                    <span class="lines"></span>
+                </button>
+            </div>
+        </nav>
+    </header>
 
 <div class="navbar-placeholder"></div>
 
