--- a/services.html
+++ b/services.html
@@ -73,50 +73,54 @@
 <section class="section-spacer tight">
   <div class="container">
     <div class="row col-spacing-30 align-items-start">
-        <div class="col-lg-7 mb-4 mb-lg-0">
-          <h1 class="mb-3">Coaching with <i class="blue-font-color">noein</i>.</h1>
 
-		<h4 class="mb-3">
-            A space to think. A space to understand. A space to become.
-          </h4>
+      <!-- LEFT: TEXT (NOT IN A CARD) -->
+      <div class="col-lg-7 mb-4 mb-lg-0">
+        <h1 class="mb-3">Coaching with <i class="blue-font-color">noein</i>.</h1>
 
-          <p class="mb-3">
-            I offer one-to-one, 60-minute transformative coaching sessions online, creating a calm,
-            supportive and collaborative space for you to reflect and explore what matters most.
-          </p>
+        <h4 class="mb-3">A space to think. A space to understand. A space to become.</h4>
 
-          <p class="mb-3">
-            Transformative coaching offers you time and space to explore what matters,
-            understand what’s shaping your choices, and reconnect with your true self.
-          </p>
+        <p class="mb-3">
+          I offer one-to-one, 60-minute transformative coaching sessions online, creating a calm,
+          supportive and collaborative space for you to reflect and explore what matters most.
+        </p>
+
+        <p class="mb-3">
+          Transformative coaching offers you time and space to explore what matters,
+          understand what’s shaping your choices, and reconnect with your true self.
+        </p>
+
+        <p class="mb-0">
+          Coaching at noein is for individuals and professionals who want to understand
+          themselves more deeply and make choices that feel aligned rather than imposed.
+        </p>
+      </div>
+
+      <!-- RIGHT: CARD -->
+      <div class="col-lg-5">
+        <div class="content-card text-center h-100 services-sessions-card">
+          <h2 class="mb-3">How our sessions work.</h2>
+
+          <ul class="list-checks mb-3 text-left">
+            <li>One-to-one 60-minute transformative coaching sessions</li>
+            <li>Online – working with clients worldwide</li>
+            <li>Available to work in person</li>
+            <li>Sessions in English and Greek</li>
+            <li>Mostly evenings, weekends and one Friday per month</li>
+            <li>Payment discussed in the discovery call, to suit client needs.</li>
+          </ul>
 
           <p class="mb-0">
-            Coaching at noein is for individuals and professionals who want to understand
-            themselves more deeply and make choices that feel aligned rather than imposed.
+            We begin with a free 30-minute Discovery Call — a relaxed conversation
+            to explore what you’d like to work on and whether coaching feels right for you.
           </p>
         </div>
+      </div>
 
-        <!-- RIGHT: HOW OUR SESSIONS WORK CARD -->
-        <div class="col-lg-5">
-          <div class="content-card text-center h-100 services-sessions-card>
-            <h2 class="mb-3">How our sessions work.</h2>
+    </div>
+  </div>
+</section>
 
-           <ul class="list-checks mb-3">
-                <li>One-to-one 60-minute transformative coaching sessions</li>
-                <li>Online – working with clients worldwide</li>
-                <li>Available to work in person</li>
-                <li>Sessions in English and Greek</li>
-                <li>Mostly evenings, weekends and one Friday per month</li>
-                <li>Payment discussed in the discovery call, to suit client needs.</li>
-            </ul>
-            <p class="mb-0">
-                We begin with a free 30-minute Discovery Call — a relaxed conversation
-                to explore what you’d like to work on and whether coaching feels right for you.
-            </p>
-                </div>
-            </div>
-          </div>
-  </section>
 
 
 <!-- SERVICES GRID -->
@@ -191,8 +195,9 @@
 </footer>
 
 </div>
-
+	
 <script src="assets/plugins/jquery.min.js"></script>
+<script src="assets/plugins/bootstrap/popperold.min.js"></script>
 <script src="assets/plugins/bootstrap/bootstrap.min.js"></script>
 <script src="assets/js/functions.js"></script>
 
