--- a/services.html
+++ b/services.html
@@ -72,7 +72,7 @@
         <!-- 2) BEGIN YOUR JOURNEY / GET IN TOUCH (keep your existing text/cards here) -->
 <section class="section-spacer tight">
   <div class="container">
-    <div class="row col-spacing-30 align-items-start">
+    <div class="row col-spacing-30 services-top-row">
 
       <!-- LEFT: TEXT (NOT IN A CARD) -->
       <div class="col-lg-7 mb-4 mb-lg-0">
