--- a/services.html
+++ b/services.html
@@ -75,30 +75,31 @@
     <div class="row col-spacing-30 services-top-row">
 
       <!-- LEFT: TEXT (NOT IN A CARD) -->
-      <div class="col-lg-7 mb-4 mb-lg-0">
-        <h1 class="mb-3">Coaching with <i class="blue-font-color">noein</i>.</h1>
+      <div class="col-lg-7 mb-4 mb-lg-0 d-flex">
+        <div class="services-text-block">
+          <h1 class="mb-3">Coaching with <i class="blue-font-color">noein</i>.</h1>
+          <h4 class="mb-3">A space to think. A space to understand. A space to become.</h4>
 
-        <h4 class="mb-3">A space to think. A space to understand. A space to become.</h4>
+          <p class="mb-3">
+            I offer one-to-one, 60-minute transformative coaching sessions, creating a calm,
+            supportive and collaborative space for you to reflect and explore what matters most.
+          </p>
 
-        <p class="mb-3">
-          I offer one-to-one, 60-minute transformative coaching sessions online, creating a calm,
-          supportive and collaborative space for you to reflect and explore what matters most.
-        </p>
+          <p class="mb-3">
+            Transformative coaching offers you time and space to explore what matters,
+            understand what’s shaping your choices and reconnect with your true self.
+          </p>
 
-        <p class="mb-3">
-          Transformative coaching offers you time and space to explore what matters,
-          understand what’s shaping your choices, and reconnect with your true self.
-        </p>
-
-        <p class="mb-0">
-          Coaching at noein is for individuals and professionals who want to understand
-          themselves more deeply and make choices that feel aligned rather than imposed.
-        </p>
+          <p class="mb-0">
+            Coaching at noein is for individuals and professionals who want to understand
+            themselves more deeply and make choices that feel aligned rather than imposed.
+          </p>
+        </div>
       </div>
 
       <!-- RIGHT: CARD -->
-      <div class="col-lg-5">
-        <div class="content-card text-center h-100 services-sessions-card">
+      <div class="col-lg-5 d-flex">
+        <div class="content-card text-center h-100 services-sessions-card w-100">
           <h2 class="mb-3">How our sessions work.</h2>
 
           <ul class="list-checks mb-3 text-left">
