--- a/services.html
+++ b/services.html
@@ -12,8 +12,9 @@
     <link rel="icon" type="image/png" href="/assets/images/favicons/favicon-96x96.png" sizes="96x96" />
 
     <link href="assets/plugins/bootstrap/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/css/app.css" rel="stylesheet">
-    <link href="assets/css/additional.css" rel="stylesheet">
+    <link href="/assets/css/app.css?v=999" rel="stylesheet">
+	<link href="/assets/css/additional.css?v=999" rel="stylesheet">
+
 
     <link href="assets/plugins/font-awesome-pro/css/all.css" rel="stylesheet">
 </head>
