--- a/services.html
+++ b/services.html
@@ -104,11 +104,11 @@
           <h2 class="mb-3">How our sessions work.</h2>
 
           <ul class="list-checks mb-3 text-left">
-            <li>One-to-one 60-minute transformative coaching sessions</li>
+            <li>One-to-one 60-minute coaching sessions</li>
             <li>Online – working with clients worldwide</li>
             <li>Available to work in person</li>
             <li>Sessions in English and Greek</li>
-            <li>Mostly evenings, weekends and one Friday per month</li>
+            <li>Mostly evenings & weekends</li>
             <li>Payment discussed in the discovery call, to suit client needs.</li>
           </ul>
 
