--- a/services.html
+++ b/services.html
@@ -105,11 +105,10 @@
 
           <ul class="list-checks mb-3 text-left">
             <li>One-to-one 60-minute coaching sessions</li>
-            <li>Online – working with clients worldwide</li>
-            <li>Available to work in person</li>
+            <li>Available online or in person</li>
             <li>Sessions in English and Greek</li>
             <li>Mostly evenings & weekends</li>
-            <li>Payment discussed in the discovery call, to suit client needs.</li>
+            <li>Payment discussed in discovery call, to suit client needs.</li>
           </ul>
 
           <p class="mb-0">
