--- a/services.html
+++ b/services.html
@@ -79,8 +79,7 @@
       <div class="col-lg-7 mb-4 mb-lg-0 d-flex">
         <div class="services-text-block">
           <h1 class="mb-3">Coaching with <i class="blue-font-color">noein</i>.</h1>
-          <h4 class="mb-3">A space to think.</h4>
-			<h4 class="mb-3">A space to understand.</h4>
+          <h4 class="mb-3">A space to think. A space to understand.</h4>
 			<h4 class="mb-3">A space to become.</h4>
 
           <p class="mb-3">
