--- a/services.html
+++ b/services.html
@@ -58,7 +58,7 @@
 <main class="flex-fill">
 
 <!-- 1) HERO / SERVICES IMAGE (full width, card-like) -->
-<section class="section-spacer tight">
+<section class="section-spacer tight services-intro-section">
   <div class="container">
     <div class="services-image-wrap">
       <img
