--- a/services.html
+++ b/services.html
@@ -155,23 +155,38 @@
             </div>
             
             <div class="col-lg-12 d-flex">
-                <div class="content-card h-100">
-                    <h2 class="mb-3">What coaching can help with.</h2>
-                    <ul class="list-checks mb-0">
-                        <li>Gain clarity on direction or next steps</li>
-                        <li>Explore a sense of feeling stuck or off-track</li>
-                        <li>Reconnect with values and priorities</li>
-                        <li>Build confidence in your own judgement</li>
-                        <li>Navigate change or transition</li>
-                        <li>Understand unhelpful thought and behaviour patterns</li>
-                        <li>Create more calm and alignment</li>
-                    </ul>
-                </div>
-            </div>
+  <div class="content-card coaching-help-card w-100">
+    <div class="row align-items-center col-spacing-30">
 
+      <!-- LEFT: TEXT -->
+      <div class="col-lg-7">
+        <h2 class="mb-3">What coaching can help with.</h2>
+        <ul class="list-checks mb-0">
+          <li>Gain clarity on direction or next steps</li>
+          <li>Explore a sense of feeling stuck or off-track</li>
+          <li>Reconnect with values and priorities</li>
+          <li>Build confidence in your own judgement</li>
+          <li>Navigate change or transition</li>
+          <li>Understand unhelpful thought and behaviour patterns</li>
+          <li>Create more calm and alignment</li>
+        </ul>
+      </div>
+
+      <!-- RIGHT: IMAGE -->
+      <div class="col-lg-5">
+        <div class="coaching-help-image-wrap">
+          <img
+            src="assets/images/coaching.jpg"
+            alt="A moment of pause and clarity"
+            class="coaching-help-image"
+          >
         </div>
+      </div>
+
     </div>
-</section>
+  </div>
+</div>
+
 
 
 <!-- CTA -->
